# ezrProject

./: CMakeLists.txt  README.md  Test.txt
cmake/: FindAssimp.cmake  FindGLEW.cmake  FindGLFW3.cmake
dep/glew-1.10.0_linux/lib/: libGLEWmx.so.1.10.0
resources/Models/cube/: cube.3ds  cube.dae  cube.mtl  cube2.mtl  cube3.mtl
resources/Models/house/: house_obj.mtl
resources/Models/imrod/: imrod.mtl
resources/Models/infinitscan/: 1.dae  1.mtl  2.dae  Infinite-Level_02.mtl  test1.mtl
src/exec/: CMakeLists.txt  main.cpp
src/exec/utils/: Control.cpp  Control.h  Model.cpp  Model.h  ShaderLoad.cpp  ShaderLoad.h  TextureManager.cpp  TextureManager.h  Utils.cpp  Utils.h
src/shaders/: depthShadow.frag  depthShadow.vert  hatch.frag  hatch.vert  hatch1Only.frag  hatch2Shadow.frag  hatch2Threshold.frag  hatch3Outline.frag  hatch4Shadow.frag  hatch9NoThresh.frag  minimal.frag  minimal.vert  outline.frag  preOutline.frag  preOutline.vert
